# Mechine-Learning-and-Simulation

./: .gitignore  Makefile  Pipfile  pyproject.toml
Machine_learning/perceptron/: iris_data_in_perceptron.py  perceptron_method.py
analysis/: particle_collision_analysis.py
configs/: init.yaml  visual.yaml
elasticCollisionUsingPython/: particle_colission_sim.py  particle_colission_sim_version2.py
particle_collider/: __main__.py  const_info.txt  data_models.py  data_models_previous_eq.py  experiment.py  many_object_collision_using_the_force_equation.py  many_object_collision_using_the_force_equation_2.py  tested_calculations .py
phsx_simulations/: 10_projectile_from_differen_height.py  11_.py  11_2_Earths_orbit.py  11_Earths_orbit.py  12_1_two_body_center_gravity.py  12_two_body_binary_star.py  13_solar_system.py  14_two_objects_collide.py  15_many_object_collision.py  16_many_object_collision2.py  17_many_object_collision.py  1_simple_sine_plot.py  2_simple_sine_cos_plot.py  3_animation_with_matplotlib.py  4_zorder.py  5_simulation_of_vehicle_euiler_method.py  6_coasting_vehicle_runge_kutta_process.py  7_falling_object_air_friction.py  8_falling_obj_air_fric_time_steps.py  9_projectile_with_air_friction.py  binary_star_system.py  commands_sim.txt  force_calculation.py  ipv.py  myfile.py
phsx_simulations/notebooks/: 15_collision.ipynb  16_collision.ipynb  17_collision.ipynb
src/object_collider/: many_object_dev.py  many_object_dev_2.py  many_object_single_type.py
tests/: test_collision.py  test_collision_experiment.py  test_many_object_single_type.py
